<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/pwdimage2"
            android:title="@string/menu_dashboard" />
        <item
            android:id="@+id/nav_myaccount"
            android:icon="@drawable/pwdimage2"
            android:title="@string/menu_myaccount" />
        <item
            android:id="@+id/nav_addpeople"
            android:icon="@drawable/pwdimage2"
            android:title="@string/menu_addpeople" />
        <item
            android:id="@+id/nav_pending"
            android:icon="@drawable/pwdimage2"
            android:title="@string/menu_pending" />


        <item
            android:id="@+id/nav_upcoming"
            android:icon="@drawable/pwdimage2"
            android:title="@string/menu_upcoming" />
        <item
            android:id="@+id/nav_previous"
            android:icon="@drawable/pwdimage2"
            android:title="@string/menu_previous" />

        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/pwdimage2"
            android:title="@string/menu_share" />
        <item
            android:id="@+id/nav_terms"
            android:icon="@drawable/pwdimage2"
            android:title="@string/menu_terms" />

        <item
            android:id="@+id/nav_subscription"
            android:icon="@drawable/pwdimage2"
            android:title="@string/menu_subscription" />
        <item
            android:id="@+id/nav_changepassword"
            android:icon="@drawable/pwdimage2"
            android:title="@string/change_password" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/pwdimage2"
            android:title="@string/menu_logout" />



    </group>



</menu>
