<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:text="@string/msg_details"
        android:textColor="@color/gray"
        android:textSize="18sp"
        android:textStyle="bold"></TextView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="24dp"
        android:text="@string/msg_deliver_date"
        android:textColor="@color/gray"
        android:textSize="16sp"></TextView>

    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/deliverdate_textinputlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        android:textColor="@color/gray"
        android:textColorHint="@color/gray"
        app:hintEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/choose_deliver_date"
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:autofillHints="@string/choose_deliver_date"
            android:hint="@string/choose_deliver_date"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:selectAllOnFocus="true"

            />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="24dp"
        android:text="@string/msg_deliver_type"
        android:textColor="@color/gray"

        android:textSize="16sp"></TextView>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"

        >

        <TextView
            android:id="@+id/textmsg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:text="@string/text"
            android:textColor="@color/gray"

            android:textSize="14sp"></TextView>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/text_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"></com.google.android.material.switchmaterial.SwitchMaterial>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:text="@string/voice"
            android:textColor="@color/gray"
            android:textSize="14sp"></TextView>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/voice_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"></com.google.android.material.switchmaterial.SwitchMaterial>
    </RelativeLayout>
    >

    <Button
        android:id="@+id/save_btn"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginStart="84dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="34dp"
        android:background="@drawable/roundedbutton"
        android:paddingLeft="80dp"
        android:paddingRight="80dp"
        android:text="@string/save"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</LinearLayout>