<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linear_header"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/gray"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/back_img"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:background="@drawable/back_arrow"></ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/forgot_password"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:textStyle="bold"></TextView>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/linear_header">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/img_forgot_pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="55dp"
                android:background="@drawable/email_lock"></ImageView>

            <LinearLayout
                android:id="@+id/linear_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:orientation="vertical"
                android:visibility="visible">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginEnd="24dp"
                    android:text="@string/forgot_pwd_1"
                    android:textColor="@color/gray"
                    android:textSize="18sp"
                    android:textStyle="bold"></TextView>

                <TextView
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="24dp"
                    android:text="@string/forgot_pwd_2"
                    android:textColor="@color/gray"
                    android:textSize="16sp"></TextView>


                <com.google.android.material.textfield.TextInputLayout

                    android:id="@+id/phonenum_textinputlayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="20dp"
                    android:textColor="@color/gray"
                    android:textColorHint="@color/gray"
                    app:hintEnabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/phone_num"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="@string/prompt_phone_num"
                        android:hint="@string/prompt_phone_num"
                        android:imeOptions="actionDone"
                        android:inputType="number"
                        android:selectAllOnFocus="true"></com.google.android.material.textfield.TextInputEditText>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>


            <Button
                android:id="@+id/next_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="24dp"
                android:layout_marginTop="56dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="34dp"
                android:background="@drawable/roundedbutton"
                android:paddingLeft="80dp"
                android:paddingRight="80dp"
                android:text="@string/next"
                android:textColor="#ffffff"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />
</RelativeLayout>