<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.home.HomeFragment">

    <LinearLayout
        android:id="@+id/registration_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:background="@drawable/initial"
            tools:ignore="MissingConstraints"></ImageView>

        <TextView
            android:id="@+id/text_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:layout_marginTop="68dp"
            android:layout_marginEnd="8dp"
            android:gravity="center"
            android:text="@string/sucess_msg"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/click_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="38dp"
            android:layout_marginEnd="8dp"
            android:text="@string/click_message"
            android:textAlignment="center"
            android:textSize="20sp" />

        <Button
            android:id="@+id/people_btn"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginStart="84dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="34dp"
            android:background="@drawable/roundedbutton"
            android:paddingLeft="80dp"
            android:paddingRight="80dp"
            android:text="@string/people_text"
            android:textColor="#ffffff"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_login_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible">


        <LinearLayout
            android:id="@+id/linear_msg_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="45dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/roundedbutton"
                    android:padding="5dp"
                    android:text="@string/upcoming_msg"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="bold"></Button>

                <LinearLayout
                    android:id="@+id/lineA"
                    android:layout_width="2dp"
                    android:layout_height="55dp"
                    android:background="@color/white"
                    android:orientation="horizontal"></LinearLayout>

                <!--            <view-->
                <!--                android:layout_width="2dp"-->
                <!--                android:layout_height="50dp"-->
                <!--                android:background="@color/gray"></view>-->

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/roundedbutton"
                    android:padding="5dp"
                    android:text="@string/previous_msg"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="14sp"

                    android:textStyle="bold"></Button>
            </LinearLayout>

            <RelativeLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:visibility="visible">

                <ProgressBar
                    android:id="@+id/progress_circular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:visibility="invisible" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/mRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </RelativeLayout>

            <Button
                android:id="@+id/new_msg_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="4dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="4dp"
                android:background="@drawable/roundedbutton"
                android:paddingLeft="70dp"
                android:paddingRight="70dp"
                android:text="@string/new_msg"
                android:textColor="#ffffff"
                android:textSize="18sp"
                android:textStyle="bold" />


        </LinearLayout>



    <LinearLayout
        android:id="@+id/linear_people_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:orientation="vertical"
        android:visibility="gone">

        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:visibility="visible">

            <ProgressBar
                android:id="@+id/progress_circular_people"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:visibility="invisible" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/mRecyclerView_people"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </RelativeLayout>

        <Button
            android:id="@+id/add_people_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="84dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="34dp"
            android:background="@drawable/roundedbutton"
            android:paddingLeft="80dp"
            android:paddingRight="80dp"
            android:text="@string/people_text"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="#ffffff"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </LinearLayout>


    </LinearLayout>

</LinearLayout>